Source/WebKit2/UIProcess/efl/WebView.cpp
@@ -117,7 +117,7 @@ void WebView::paintToCairoSurface(cairo_surface_t* surface)
     const FloatPoint& pagePosition = m_ewkView->pagePosition();
     double effectiveScale = m_page->deviceScaleFactor() * m_ewkView->pageScaleFactor();
 
-    cairo_matrix_t transform = { effectiveScale, 0, 0, effectiveScale, - pagePosition.x(), - pagePosition.y() };
+    cairo_matrix_t transform = { effectiveScale, 0, 0, effectiveScale, -pagePosition.x() * m_page->deviceScaleFactor(), -pagePosition.y() * m_page->deviceScaleFactor() };
     cairo_set_matrix(context.cr(), &transform);
 
     scene->paintToGraphicsContext(&context);
@@ -200,7 +200,9 @@ void WebView::updateViewportSize()
         m_ewkView->pageViewportController()->didChangeViewportSize(m_ewkView->size());
         return;
     }
-    m_page->drawingArea()->setVisibleContentsRect(FloatRect(m_ewkView->pagePosition(), m_ewkView->size()), FloatPoint());
+    FloatPoint uiPosition(m_ewkView->pagePosition());
+    uiPosition.scale(1 / m_ewkView->pageScaleFactor(), 1 / m_ewkView->pageScaleFactor());
+    m_page->drawingArea()->setVisibleContentsRect(FloatRect(uiPosition, m_ewkView->size()), FloatPoint());
 }
 
 void WebView::didChangeContentsSize(const WebCore::IntSize& size)
@@ -218,8 +220,8 @@ AffineTransform WebView::transformToScene() const
     TransformationMatrix transform = m_userViewportTransform;
 
     const FloatPoint& pagePosition = m_ewkView->pagePosition();
-    transform.translate(-pagePosition.x(), -pagePosition.y());
     transform.scale(m_page->deviceScaleFactor());
+    transform.translate(-pagePosition.x(), -pagePosition.y());
     transform.scale(m_ewkView->pageScaleFactor());
 
     return transform.toAffineTransform();
@@ -493,7 +495,9 @@ void WebView::pageDidRequestScroll(const IntPoint& position)
         m_ewkView->pageViewportController()->pageDidRequestScroll(position);
         return;
     }
-    m_ewkView->setPagePosition(FloatPoint(position));
+    FloatPoint uiPosition(position);
+    uiPosition.scale(m_ewkView->pageScaleFactor(), m_ewkView->pageScaleFactor());
+    m_ewkView->setPagePosition(uiPosition);
     m_ewkView->scheduleUpdateDisplay();
 }
 
